--- a/index_en.html
+++ b/index_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,8 +38,8 @@
                          <h3>Contact Information</h3>
                           <a href="https://telegram.me/sokolanton" target="_blank">Telegram:</a>@sokolanton<br>
                           <a href="https://instagram.com/homer.smpsn?igshid=YmMyMTA2M2Y="target="_blank">Instagram:</a>@homer.smpsn<br>
-                          <a href="mailto:antonkekdurachek@gmail.com"target="_blank">E-mail: </a>  antonkekdurachek@gmail.com    <br>
-                          <a href="index.html" target="_blank">Ukrainian version</a><br>
+                          <a href="mailto:antonkekdurachek@gmail.com">E-mail: </a>  antonkekdurachek@gmail.com    <br>
+                          <a href="index.html" >Ukrainian version</a><br>
                        <a href="https://goo.gl/maps/woRUCtAJbECzvAR69"  id="adress"target="_blank">Ukraine. Kyiv</a> 
                 </div>
             
@@ -48,7 +48,7 @@
             <p id="fone">EXPERIENCE IN THE USE OF SKILLS</p>
             <ul>
                 <li> Participated in the development of the site
-                  <a href=" https://www.vsgo.org.ua/">https://www.vsgo.org.ua/</a></li>
+                  <a href=" https://www.vsgo.org.ua/" target="_blank">https://www.vsgo.org.ua/</a></li>
                 <li>Participated and won the Olympics with
                     hypertext markup HTML / CSS</li>
             </ul>
