--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,8 +40,8 @@
                          <h3>Контактна інформація</h3>
                           <a href="https://telegram.me/sokolanton" target="_blank">Telegram:</a>@sokolanton<br>
                           <a href="https://instagram.com/homer.smpsn?igshid=YmMyMTA2M2Y="target="_blank">Instagram:</a>@homer.smpsn<br>
-                          <a href="mailto:antonkekdurachek@gmail.com"target="_blank">E-mail: </a>  antonkekdurachek@gmail.com    <br>
-                          <a href="index_en.html" target="_blank">Версія англійською</a><br>
+                          <a href="mailto:antonkekdurachek@gmail.com">E-mail: </a>  antonkekdurachek@gmail.com    <br>
+                          <a href="index_en.html" >Версія англійською</a><br>
                        <a href="https://goo.gl/maps/woRUCtAJbECzvAR69"  id="adress"target="_blank">Ukraine. Kyiv</a> 
                 </div>
             
@@ -50,7 +50,7 @@
             <p id="fone">ДОСВІД У ВИКОРИСТАННІ НАВИЧОК</p>
             <ul>
                 <li> Брав участь у розробці сайту
-                  <a href=" https://www.vsgo.org.ua/">https://www.vsgo.org.ua/</a></li>
+                  <a href=" https://www.vsgo.org.ua/" target="_blank">https://www.vsgo.org.ua/</a></li>
                 <li>Брав участь та виграв олімпіади з
                     гіпертекстової розмітки HTML/CSS</li>
             </ul>
